# rubik-s-cube-solver

./: .gitignore  ERRORS_FIXED.txt  ERROR_FIX_SUMMARY.md  FINAL_SUMMARY.md  GITHUB_SETUP.md  Makefile  PROJECT_CHECKLIST.md  QUICK_REFERENCE.md  README.md  START_HERE.txt  __init__.py  pyproject.toml  requirements-kociemba.txt  requirements.txt  setup.sh
cli/: __init__.py  cli.py
cube/: __init__.py  cube.py  moves.py
examples/: scramble1.json  scramble2.json  solution1.json
python/: __init__.py  scan.py
solvers/: __init__.py  bfs_solver.py  ida_solver.py  kociemba_wrapper.py  solver_interface.py
tests/: test_cube.py  test_solver_basic.py
tools/: benchmark.py
ui/: app.py  index.html
ui/static/: script.js
